--- a/index.html
+++ b/index.html
@@ -2,8 +2,48 @@
 <html>
     <head>
         <title>My first website</title>
+        <style>
+              h1{
+                color:red;
+              }
+              p{
+                color:green;
+              }
+        </style>
     </head>
     <body>
-        <h1>My first website</h1>
+        <h1>Shah Rukh Khan death threat: Police arrest accused who said his phone got stolen</h1>
+        <img src="./img/1.avif">
+        <p>The Mumbai Police on Tuesday arrested a man in Chhattisgarh's Raipur for allegedly issuing death threats to actor Shah Rukh Khan.</p>
+        <p>The Bandra police station last week received a call threatening Shah Rukh Khan and asking for ₹50 lakh. A case was registered by the police under sections 308(4) (extortion involving threats of death or serious injury) and 351(3)(4) (criminal intimidation) of Bharatiya Nyaya Sanhita (BNS) against the caller.</p>
+        <p>The police zeroed in on a lawyer in Chhattisgarh, named Faizan Khan.</p>
+        <p>The Raipur lawyer was summoned because the threat call was made using a phone number registered in his name. He was arrested after he didn't appear before the police.</p>
+        <p>The Mumbai police had visited Raipur and summoned Faizan Khan, who lives within the limits of the Pandri police station.</p>
+        <h1>Encounter breaks out with terrorists in Kashmir's Bandipora, operation underway</h1>
+        <img src="./img2/2.avif">
+        <p>Two to three terrorists are believed to be trapped after a gunbattle erupted during a joint cordon and search operation by security forces.</p>
+        <p>An encounter broke out between security forces and terrorists in North Kashmir's Nagmarg area on Tuesday.</p>
+        <p>An encounter broke out between security forces and terrorists in North Kashmir's Nagmarg area on Tuesday.</p>
+        <p>Two to three terrorists are believed to be trapped after a gunbattle erupted during a joint cordon and search operation by security forces, following intelligence about their presence in the area.</p>
+        <h1>ED raids 17 locations in Jharkhand, West Bengal over illegal Bangladeshi infiltration</h1>
+        <img src="./img3/3.avif">
+        <p>In a money laundering probe connected to illegal Bangladeshi infiltration, the Enforcement Directorate searched poll-bound Jharkhand on Tuesday</p>
+        <p>The Enforcement Directorate on Tuesday raided multiple locations in poll-bound Jharkhand, apart from West Bengal, in a money laundering investigation linked to alleged illegal infiltration of Bangladeshi nationals.</p>
+        <p>A total of 17 places are raided covered in the two neighbouring states by the Jharkhand office of the federal probe agency.</p>
+        <p>The Jharkhand assembly elections are scheduled to begin on Wednesday, November 13, with the first round of voting. The following phase will take place on November 20. Byelections for six Bengal assembly seats are also set for tomorrow.</p>
+        <h1>Uttar Pradesh jeweller kills wife, children; uploads photo on WhatsApp status</h1>
+        <img src="./img4/4.avif">
+        <p>The incident came to light when the jeweller uploaded the photographs of the bodies of his wife and children on his WhatsApp status.</p>
+        <p>A jeweller allegedly killed his wife, two daughters and a son in Uttar Pradesh after feeding them a poisonous substance, and then attempted suicide by jumping in front of a moving train, the police told news agency PTI.</p>
+        <p>The man, Mukesh Verma, was saved from the rail tracks by railway protection force jawans. The incident came to light on Monday evening as Mukesh uploaded the photographs of his wife and children's bodies onto his WhatsApp status.</p>
+        <p>After seeing the disturbing images, his other family members checked the rooms in their house and found the bodies.</p>
+        <h1>India's most successful star gave 400 hits, 50 blockbusters; way more than Amitabh, Rajinikanth, Shah Rukh Khan combined</h1>
+        <img src="./img5/5.avif">
+        <p>720 films as hero, 400 hits, 50 blockbusters, and 30 films in a single year - the staggering achievements of India's most successful star are beyond belief.
+            The term India's most successful actor usually evokes thoughts of the usual suspects - Amitabh Bachchan, Shah Rukh Khan, Dilip Kumar, or even Rajinikanth or Kamal Haasan. These have been some of the biggest superstars in Indian cinema, all of whom have starred in some of the biggest films of all time and given more hits than most actors can dream of. Yet, the crown does not belong to any of them, for there is one man who gave more hits as a leading man than all of them put together. (Also read: World's highest-paid actor earned $73 million in 2023; has no hit in years, still out-earns Tom Cruise, Shah Rukh Khan)
+            
+        </p>
+        <p>Malayalam screen idol Prem Nazir holds multiple world records courtesy of his prolific career. A cultural icon in Kerala, Prem Nazir ruled Malayalam cinema for three decades. In a career that spanned from 1951-89, Nazir worked as the lead in a staggering 720 films, a world record for a while. He did this by working double or even triple shifts throughout his peak, appearing in as many as 30 films in a year twice (another world record). This prolific nature was combined with an exemplary strike rate of hits, as most of his films were successful. Industry insiders and trade analysts estimate that more than half of Nazir's films as hero were box office successes, with estimates ranging from 350-500. But most film historians agree that Nazir starred in at least 400 hit films as a hero, of which 50 attained blockbuster status at the box office.</p>
+        <p>To understand how monumental Prem Nazir's record is, one just needs to compare it to some of the other big stars. Amitabh Bachchan, arguably Indian cinema's biggest name, has fewer than 60 hits as a leading man, 10 of which are blockbusters. South superstar Rajinikanth, who has been more prolific than his Bollywood contemporary, is a little ahead with over 80 hits and over a dozen blockbusters.</p>
     </body>
 </html>
